--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -1,7 +1,41 @@
+.list-title {
+	font-size: 36px;
+	font-weight: 700;
+	color: #06f;
+	height: 100px;
+	line-height: 100px;
+	padding-left: 20px;
+	background-color: #fff;
+	position: fixed;
+	top: 0;
+	left: 0;
+	width: 100%;
+	display: flex;
+	align-items: center;
+	/* box-shadow: 0px 0px 2px 1px #eff0f5; */
+}
+
+.list-title-text {
+	position: relative;
+}
+.list-title-text::after {
+	position: absolute;
+	bottom: 0;
+	width: 56px;
+	display: block;
+	content: '';
+	height: 10px;
+	background-color: #06f;
+	left: 50%;
+	transform: translateX(-50%);
+	border-radius: 5px;
+}
+
 .list-container {
 	min-height: 100vh;
 	background-color: #eff0f5;
-	padding-bottom: 120px;
+	padding: 100px 0 120px;
+	box-sizing: border-box;
 }
 
 .list-item {
@@ -67,5 +101,5 @@
 
 .fill {
 	width: 100%;
-	height: 100vh;
+	height: calc(100vh - 220px);
 }
