--- a/src/components/tabbar/index.module.css
+++ b/src/components/tabbar/index.module.css
@@ -7,6 +7,7 @@
 	display: flex;
 	align-items: center;
 	background-color: #fff;
+	box-shadow: 1px 5px 10px 5px #ccc;
 }
 
 .tabbar-item  {
@@ -25,5 +26,6 @@
 }
 
 .current {
+	font-weight: 700;
 	color: #06f;
 }
