--- a/src/pages/home/index.module.css
+++ b/src/pages/home/index.module.css
@@ -1,7 +1,7 @@
 .list-title {
 	font-size: 36px;
 	font-weight: 700;
-	color: #06f;
+	color: var(--themeColor);
 	height: 100px;
 	line-height: 100px;
 	padding-left: 20px;
@@ -25,7 +25,7 @@
 	display: block;
 	content: '';
 	height: 10px;
-	background-color: #06f;
+	background-color: var(--themeColor);
 	left: 50%;
 	transform: translateX(-50%);
 	border-radius: 5px;
