--- a/src/components/tabbar/index.module.css
+++ b/src/components/tabbar/index.module.css
@@ -3,7 +3,7 @@
 	bottom: 0;
 	left: 0;
 	width: 100%;
-	height: 100px;
+	height: 136px;
 	display: flex;
 	align-items: center;
 	background-color: #fff;
@@ -15,6 +15,7 @@
 	display: flex;
 	align-items: center;
 	justify-content: center;
+	flex-direction: column;
 	color: #333;
 	text-decoration: none;
 }
@@ -28,4 +29,8 @@
 .current {
 	font-weight: 700;
 	color: var(--themeColor);
+}
+
+.title {
+	font-size: 20px;
 }
