--- a/src/pages/user/index.module.css
+++ b/src/pages/user/index.module.css
@@ -10,6 +10,7 @@
 }
 
 .user-name {
+	margin-top: 20px;
 	font-size: 48px;
 	color: #333;
 	font-weight: 700;
@@ -41,4 +42,18 @@
 	line-height: 80px;
 	text-align: center;
 	color: #fff;
+}
+
+.logout {
+	position: fixed;
+	bottom: 200px;
+	left: 50%;
+	width: 480px;
+	text-align: center;
+	height: 100px;
+	line-height: 100px;
+	border-radius: 50px;
+	transform: translateX(-50%);
+	color: var(--themeColor);
+	border: 1px solid var(--themeColor);
 }
